tests/ui/inference/dont-collect-stmts-from-parent-body.stderr
error[E0392]: type parameter `T` is never used
  --> $DIR/dont-collect-stmts-from-parent-body.rs:3:13
   |
LL | struct Type<T>;
   |             ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error[E0282]: type annotations needed
  --> $DIR/dont-collect-stmts-from-parent-body.rs:10:17
   |
LL |                 Type
   |                 ^^^^ cannot infer type of the type parameter `T` declared on the struct `Type`
   |
help: consider specifying the generic argument
   |
LL |                 Type::<T>
   |                     +++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0392.
For more information about an error, try `rustc --explain E0282`.
